# msys2dl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml  pre-commit.yaml
msys2dl/: application.py  gpg_keyring.py  main.py  package.py  package_database.py  package_store.py  progress.py  utilities.py
msys2dl/commands/: command.py  command_extract.py  command_make_deb.py  output_dir_mixin.py  package_set_mixin.py
msys2dl/download/: download_callback.py  parallel_downloader.py  simple_downloader.py
msys2downloader/: application.py  deb_builder.py  downloader.py  gpg_keyring.py  main.py  package.py  package_database.py  package_store.py  progress.py  utilities.py
msys2downloader/download/: callback_registry.py  download_callback.py  download_request.py  parallel_downloader.py  simple_downloader.py
