[tool.ruff]
line-length = 110
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff.lint]
select = ["I", "N", "UP", "F", "C4", "ICN", "PIE", "PYI", "RET", "SIM", "TID", "ARG", "PTH", "ERA",
                 "RUF", "S", "TRY", "NPY", "PD", "PGH", "PLC", "PLE", "PLW", "RUF"]
ignore = ["TRY003", "S202", "S603"]

[tool.poetry]
name = "msys2downloader"
version = "0.1.0"
description = ""
authors = ["nanoufo <79045429+nanoufo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
zstandard = "^0.22.0"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
types-requests = "^2.31.0.20240311"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
msys2-download = "msys2downloader.main:main"
